tests/rosetta/out/Rust/checkpoint-synchronization-3.error
rustc error: exit status 1
error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiToRustcheckpoint-synchronization-3396060990/001/prog.rs:26:13
   |
26 |             a += lower(p);
   |             -^^^^^^^^^^^^
   |             |
   |             cannot use `+=` on type `&str`

error[E0308]: mismatched types
 --> /tmp/TestMochiToRustcheckpoint-synchronization-3396060990/001/prog.rs:8:42
  |
8 |             if ch == &up[i as usize..i + 1 as usize] {
  |                                          ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
 --> /tmp/TestMochiToRustcheckpoint-synchronization-3396060990/001/prog.rs:8:38
  |
8 |             if ch == &up[i as usize..i + 1 as usize] {
  |                                      ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
 --> /tmp/TestMochiToRustcheckpoint-synchronization-3396060990/001/prog.rs:8:40
  |
8 |             if ch == &up[i as usize..i + 1 as usize] {
  |                                        ^ no implementation for `i32 + usize`
  |
  = help: the trait `Add<usize>` is not implemented for `i32`
  = help: the following other types implement trait `Add<Rhs>`:
            `&i32` implements `Add<i32>`
            `&i32` implements `Add`
            `i32` implements `Add<&i32>`
            `i32` implements `Add`

error[E0308]: mismatched types
 --> /tmp/TestMochiToRustcheckpoint-synchronization-3396060990/001/prog.rs:9:45
  |
9 |                 return &low[i as usize..i + 1 as usize];
  |                                             ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
 --> /tmp/TestMochiToRustcheckpoint-synchronization-3396060990/001/prog.rs:9:41
  |
9 |                 return &low[i as usize..i + 1 as usize];
  |                                         ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
 --> /tmp/TestMochiToRustcheckpoint-synchronization-3396060990/001/prog.rs:9:43
  |
9 |                 return &low[i as usize..i + 1 as usize];
  |                                           ^ no implementation for `i32 + usize`
  |
  = help: the trait `Add<usize>` is not implemented for `i32`
  = help: the following other types implement trait `Add<Rhs>`:
            `&i32` implements `Add<i32>`
            `&i32` implements `Add`
            `i32` implements `Add<&i32>`
            `i32` implements `Add`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0308, E0368.
For more information about an error, try `rustc --explain E0277`.
